       database. This will allow multiple instances of Sqitch to run at the
       same time as long as they're connecting to different databases. Thanks
       to Dmytro Kh for the report and discussion of the options (#670).
     - Fixed test failures where DBD::Mem was not installed. Likely only
       occurred on some CPAN Testers nodes. Thanks to Slaven Rezić for those
       (#673).

1.3.0  2022-08-12T22:09:13Z
     - Fixed an issue when testing Firebird on a host with Firebird installed
       but no `isql`, and when using a local Firebird (e.g., the Engine12
       provider), which allows only one connection at a time. Thanks to Slaven
       Rezić for the the reproducible configuration (#597).
     - Tweaked the Postgres engine to support Yugabyte. The only unsupported
       features are explicit locks, so users need to manually ensure that only
       one instance of Sqitch is updating the cluster at a time.
     - Added support for CockroachDB. Almost exactly the same as for Postgres,
       so the new App::Sqitch::Engine::cockroach class extends
       App::Sqitch::Engine::pg to make a few changes. The SQL files with
       the registry DDL varies in a few ways, so they're separate.
     - Now require URI::db v0.20 for Cockroach and Yugabyte URI support.
     - Dropped support for MySQL 5.0.
     - Added explicit sorting for aggregated lists (such as the tags associated
       with a commit) to the MySQL, Exasol, Snowflake, and Postgres (8.4 and
       higher) engines.
     - Fixed slow deploys on MariaDB thanks to fractional timestamp support
       added in 5.03.05. Thanks to @rbrigot for the PR (#658)!
     - Fixed a bug where destination locking failed on the first deploy to
       MySQL. Bug introduced along with destination locking in v1.2.0.
       Thanks Tom Bloor the report and to Alberto Simões for the help
       replicating the issue (#601).
     - Removed the `sqitch engine update-config` action, originally added for