@@ -14,6 +14,12 @@ Revision history for Perl extension App::Sqitch
      - Fixed test failures where DBD::Mem was not installed. Likely only
        occurred on some CPAN Testers nodes. Thanks to Slaven Rezić for those
        (#673).
+     - Banned the backslash character (`\`) in change and tag names. It would
+       be ignored on Unix-style systems, but create unexpected subdirectories
+       on Windows systems.
+     - Banned the slash character (`/`) in tag names. They have been allowed
+       in change names to enable script organization, but can wreak havoc
+       when used in tag names. Thanks to @ewie for the report (#680)!
 
 1.3.0  2022-08-12T22:09:13Z
      - Fixed an issue when testing Firebird on a host with Firebird installed
